--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+click==8.1.7
+demoji==1.1.0
+joblib==1.3.2
+nltk==3.8.1
 numpy==1.26.0
 pandas==2.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
+regex==2023.10.3
 six==1.16.0
+tqdm==4.66.1
 tzdata==2023.3
