--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,7 @@ regex==2023.10.3
 six==1.16.0
 tqdm==4.66.1
 tzdata==2023.3
+fastapi==0.104.1
+PyABSA==1.16.28
+pydantic==2.4.2
+uvicorn==0.24.0.post1
