--- a/.gitignore
+++ b/.gitignore
@@ -164,4 +164,13 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
+
+checkpoints/
+integrated_datasets/
+
+checkpoints-v1.16.json
+atepc_inference.result.json
+
+review_sentences.txt
+merged_data.csv
